--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "postinstall": "playwright install"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "next": "14.2.13",
+    "next-intl": "^3.20.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next-intl": "^3.20.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@playwright/test": "^1.47.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
-    "@playwright/test": "^1.47.0"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
