feat: Initial upload of chatbot project with enhanced features - Includes Next.js 14, TypeScript, Tailwind CSS, N8N integration, and multi-backend support (Python, Gemini, ChatGPT)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
-# N8N Configuration
-N8N_BASE_URL=http://localhost:5678
-N8N_WEBHOOK_PATH=/webhook/chat
+# .env.example
+# Copy this file to .env.local and update the values
 
-# Next.js Configuration
+# Base N8N URL
+N8N_BASE_URL=https://sswebhookss.mateogiraldo.online
+
+# Default N8N webhook path (used for ChatGPT backend)
+N8N_WEBHOOK_PATH=/webhook/e26fc1da-1f0b-4391-9e8b-19736d89b924
+
+# N8N webhook path for Gemini backend
+N8N_GEMINI_WEBHOOK_PATH=/webhook/83d9324f-cab7-442c-8af8-f8c41b3078c2
+
+# Default file upload path (used for ChatGPT backend)
+N8N_FILE_UPLOAD_PATH=/form/82848bc4-5ea2-4e5a-8bb6-3c09b94a8c5d
+
+# File upload path for Gemini backend
+N8N_GEMINI_FILE_UPLOAD_PATH=/form/89c24c04-11c0-49b8-940b-df8b3a361a53
+
+# Next.js public URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
