--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,13 @@ N8N_FILE_UPLOAD_PATH=/form/82848bc4-5ea2-4e5a-8bb6-3c09b94a8c5d
 # File upload path for Gemini backend
 N8N_GEMINI_FILE_UPLOAD_PATH=/form/89c24c04-11c0-49b8-940b-df8b3a361a53
 
+# Python Backend Configuration (for RAG system)
+PYTHON_BACKEND_URL=https://back.jhosbandev.site
+
+# SSL Configuration (for development only)
+# WARNING: Never set this to 'true' in production!
+DISABLE_SSL_VERIFY=false
+
 # Next.js public URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
