--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - N8N_FILE_UPLOAD_PATH=/form/82848bc4-5ea2-4e5a-8bb6-3c09b94a8c5d
       - N8N_GEMINI_FILE_UPLOAD_PATH=/form/89c24c04-11c0-49b8-940b-df8b3a361a53
       - NEXT_PUBLIC_APP_URL=http://localhost:3000
+      - PYTHON_BACKEND_URL=https://back.jhosbandev.site
     networks:
       - traefik_public
     deploy:
@@ -17,7 +18,7 @@ services:
         - "traefik.enable=true"
         - "traefik.http.routers.chatbot.rule=Host(`sschatss.mateogiraldo.online`)"
         - "traefik.http.routers.chatbot.entrypoints=websecure"
-        - "traefik.http.routers.chatbot.tls.certresolver=letsencrypt"
+        - "traefik.http.routers.chatbot.tls.certresolver=le"
         - "traefik.http.services.chatbot.loadbalancer.server.port=3000"
         - "traefik.http.routers.chatbot-http.rule=Host(`sschatss.mateogiraldo.online`)"
         - "traefik.http.routers.chatbot-http.entrypoints=web"
